@@ -316,6 +316,11 @@ class UrlParseTestCase(unittest.TestCase):
         self.assertEqual(type(p.hostname), type(uri))
         self.assertEqual(type(p.path), type(uri))
 
+    def test_noslash(self):
+        # Issue 1637: http://foo.com?query is legal
+        self.assertEqual(urlparse.urlparse("http://example.com?blahblah=/foo"),
+                         ('http', 'example.com', '', '', 'blahblah=/foo', ''))
+
 def test_main():
     test_support.run_unittest(UrlParseTestCase)
 
